# metocean-api

./: .gitignore  README.md  environment.yml  pyproject.toml  readthedocs.yml  setup.py  version.py
.github/: CODEOWNERS
.github/workflows/: tests.yml
docs/: build.os  conf.py  index.rst  requirements.txt
examples/: example_combine_data.py  example_import_ERA5.py  example_import_NORA3.py  example_import_obs.py
metocean_api/: version.py
metocean_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
metocean_api/cli/: metocean_cli.py
metocean_api/ts/: CDO_NORA3.py  __init__.py  aux_funcs.py  read_ec.py  read_metno.py  read_tudelft.py  ts_mod.py
metocean_api/ts/internal/: __init__.py  aux_funcs.py  convention.py  ec.py  metno.py  product.py  products.py  tudelft.py
metocean_api/ts/internal/copernicus/: __init__.py  copernicus_products.py
metocean_api/ts/internal/ec/: __init__.py  ec_products.py
metocean_api/ts/internal/metno/: __init__.py  met_product.py  met_products.py
metocean_api/ts/internal/tudelft/: __init__.py  tudelft_products.py
scripts/: download_cli.py
tests/: extract_data.py  test_combine_data.py  test_extract_data.py
tests/data/: NORA3_atm_sub_lon1.32_lat53.324_20210101_20210331.csv  NORA3_wind_sub_lon1.32_lat53.324_20210101_20210131.csv
